--- a/housekeeper/home.html
+++ b/housekeeper/home.html
@@ -2,17 +2,17 @@
 <html lang = "es">
     <head>
         <title>Registro</title>
-        <link rel="stylesheet" href="./css/bootstrap.min.css">
+        <link rel="stylesheet" href="../css/bootstrap.min.css">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta charset = "utf-8">
-        <link rel="shortcut icon" type="image/x-icon" href="image/favicon.ico">
+        <link rel="shortcut icon" type="image/x-icon" href="../image/favicon.ico">
     </head>
     <body>
          <!--ENCABEZADO-->
         <header>
             <nav class = "navbar navbar-dark bg-secondary navbar-expand-md">
                 <div class = "container-fluid">
-                    <a class = "navbar-brand"><img class = "" src="image/logo-apolo.jpg" alt="LOGO-APOLO" width="75" height="auto"></a>
+                    <a class = "navbar-brand"><img class = "" src="../image/logo-apolo.jpg" alt="LOGO-APOLO" width="75" height="auto"></a>
 
                    <button type="button" class = "navbar-toggler" data-toggle = "collapse" data-target = "#menu" aria-controls="menu" aria-expanded = "false" aria-label="Desplegar menu"><spam class="navbar-toggler-icon"></spam></button>
 
@@ -36,18 +36,18 @@
                 <div class = "container-fluid">
                     <div class = "row d-flex justify-content-center">
                         <div class = "col-4 card-img border mr-4">
-                                <a href="professor.html"><img class = "img-fluid" src="image/logo-apolo2.jpg" height="60px"></a>
+                                <a href="professor.html"><img class = "img-fluid" src="../image/logo-apolo2.jpg" height="60px"></a>
                         </div>
                         <div class = "col-4 card-img border">
-                                <a href="student.html"><img class = "img-fluid" src="image/logo-apolo2.jpg" height="60px"></a>
+                                <a href="student.html"><img class = "img-fluid" src="../image/logo-apolo2.jpg" height="60px"></a>
                         </div>
                     </div>
                 </div>
             </section>
         </main>
         
-        <script src="js/jquery-3.4.1.min.js"></script>
-        <script src="js/popper.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
+        <script src="../js/jquery-3.4.1.min.js"></script>
+        <script src="../js/popper.min.js"></script>
+        <script src="../js/bootstrap.min.js"></script>
     </body>
 </html>
